# taiko-rust

./: Cargo.toml  README.md
.cargo/: config
src/: consts.rs  gameplay.rs  main.rs  notes.rs  score.rs  types.rs  ui.rs
