[package]
name = "taikrust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#NOTE: Remember to revert dynamic feature before releasing your game! Otherwise you will need to include libbevy_dylib alongside your game if you want it to run.
#If you remove the "dynamic" feature, your game executable can run standalone. (https://bevyengine.org/learn/book/getting-started/setup/)
bevy = { version = "0.5.0", features = ["dynamic"] }